ci: add conditionals to GitHub actions if secrets are unavailable

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,3 +42,4 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage.xml
+        if: ${{ secrets.CODECOV_TOKEN != '' }}
