--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,13 +12,17 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
           node-version: 14.15.0
+
       - name: Install dependencies
         run: npm ci
+
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release
+        if: ${{ secrets.GITHUB_TOKEN != '' }}
