ci: add conditionals to GitHub actions if secrets are unavailable

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,4 +25,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release
-        if: ${{ secrets.GITHUB_TOKEN != '' }}
+        if: ${{ env.GITHUB_TOKEN != '' }}
