--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -8,8 +8,10 @@ jobs:
     steps:
     - name: Run Labeler
       uses: actions/labeler@v3
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
         configuration-path: .github/.labeler.yml
         sync-labels: true
-      if: ${{ secrets.GITHUB_TOKEN != '' }}
+      if: ${{ env.GITHUB_TOKEN != '' }}
