--- a/.env-config.yaml
+++ b/.env-config.yaml
@@ -4,7 +4,7 @@ component_roots:
 
 inputs: &inputs-defaults
   environments:
-    root: "{{root_account_id}}"
+    root: "{{aws_root_account_id}}"
 
 bootstrap: &bootstrap-defaults
   resource_groups: {}
