fix: update template placeholders, run setup (#2)
* fix: update template placeholders, run setup

fixes #1

* docs: update README toc

* fix: fix tests and upgrade pre-commit actions

--- a/.env-config.yaml
+++ b/.env-config.yaml
@@ -4,7 +4,7 @@ component_roots:
 
 inputs: &inputs-defaults
   environments:
-    root: "{{aws_account_id}}"
+    root: "649115683993"
 
 bootstrap: &bootstrap-defaults
   resource_groups: {}
